# ChangeLog for x11-libs/libSM
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libSM/ChangeLog,v 1.70 2009/09/30 09:58:54 haubi Exp $

  30 Sep 2009; Michael Haubenwallner <haubi@gentoo.org> libSM-1.1.1.ebuild,
  metadata.xml:
  add local IUSE=+uuid (with eapi 2 bump) for bug#230981

  14 Aug 2009; Rémi Cardona <remi@gentoo.org> libSM-1.1.1.ebuild:
  up libICE dep to 1.0.5 (fixes bug #281360)

  13 Aug 2009; Rémi Cardona <remi@gentoo.org> libSM-1.1.1.ebuild:
  look for FreeBSD's libc instead of x86-fbsd, thanks aballier

*libSM-1.1.1 (13 Aug 2009)

  13 Aug 2009; Rémi Cardona <remi@gentoo.org> +libSM-1.1.1.ebuild:
  bump to 1.1.1, fix bugs 270003 and 280518

  11 Aug 2009; Rémi Cardona <remi@gentoo.org> -libSM-1.0.2.ebuild,
  -libSM-1.0.3.ebuild:
  drop old ebuilds

  23 Jun 2009; Tobias Klausmann <klausman@gentoo.org> libSM-1.1.0.ebuild:
  Stable on alpha for xorg-server-1.5/xorg-x11-7.4

  15 May 2009; Raúl Porcel <armin76@gentoo.org> libSM-1.1.0.ebuild:
  arm/s390 stable

  04 May 2009; Samuli Suominen <ssuominen@gentoo.org> libSM-1.0.2.ebuild,
  libSM-1.0.3.ebuild, libSM-1.1.0.ebuild:
  Move use_ functions out of global scope.

  16 Apr 2009; Jeroen Roovers <jer@gentoo.org> libSM-1.1.0.ebuild:
  Stable for HPPA (bug #251832).

  15 Apr 2009; Raúl Porcel <armin76@gentoo.org> libSM-1.1.0.ebuild:
  ia64/sh stable wrt #251832

  06 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> libSM-1.1.0.ebuild:
  Stable on sparc, bug #251832

  05 Apr 2009; Markus Meier <maekke@gentoo.org> libSM-1.1.0.ebuild:
  x86 stable, bug #251832

  05 Apr 2009; Olivier Crête <tester@gentoo.org> libSM-1.1.0.ebuild:
  Stable on amd64, bug #251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> libSM-1.1.0.ebuild:
  Marking libSM-1.1.0 ppc64 stable for bug 251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> libSM-1.1.0.ebuild:
  Marking libSM-1.1.0 ppc stable for bug 251832
