@@ -1,6 +1,6 @@
 DIST libSM-1.1.0.tar.bz2 252599 RMD160 17edd4f1e931058f86ccdff17829115d2c1f5bad SHA1 2760a80f0bd1b4728535a92601ce2db0b98cdd98 SHA256 7536ac382e1ff82014d3a0defba0c61b3a30984f4e5bc7707960d6debcb92a82
 DIST libSM-1.1.1.tar.bz2 262305 RMD160 18aba022ccfbe842d025bf66c30a9f56510475f2 SHA1 dc535af7328dee9a6121b85c3f8041656681a195 SHA256 f50d184d8c6a031b3ff4f0d52efcfd4ffa811b0362b166a9ff9ba4c2e9aa7ce0
 EBUILD libSM-1.1.0.ebuild 684 RMD160 89e67fc7167d347c14227d82860ba302a1284ceb SHA1 ab008b43e9c60476701db2dce45c13c0008326fa SHA256 9541161e5175e6cc4287db46925c02c5a9091f1cffa4016a64bedd788ff6c387
-EBUILD libSM-1.1.1.ebuild 1194 RMD160 b48e1fc9c00073670128d5d992bbae5faf766dd0 SHA1 a9af0d64375ee942e7a4bdf861674ffb2413532d SHA256 f03adf46a99bee5d83974b39894d069e8d298e8f50006b0284ec3ebf6e9abcfb
-MISC ChangeLog 8188 RMD160 776839bf4b21157fbf9b6fb5275b88fbb49dc6b5 SHA1 0a9d16a68715bbf5c994eae13e39affc6e5dee84 SHA256 a87c611fd81ea93d465475c8c9025b4cc01fa834005eb2e13a23af77105147a3
-MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
+EBUILD libSM-1.1.1.ebuild 1198 RMD160 73a582de0e01f032d399beae9186e7ea46fe6673 SHA1 8a43ed06ea93ea05ff42e398b8cdf574a44fba89 SHA256 41c28dfcfa9b61186072160fcde7ab1d320c74c7c67135c7785bdaabcb6544ac
+MISC ChangeLog 8294 RMD160 82c02af92ebbcb85b54b8bdac8e9900ac4582260 SHA1 59f60e381a066da26bfd4b99e77fb2871731a414 SHA256 476f2dc95cad45f4c0859d005d121888ddd75ba23a87b1549521caa3914afd8d
+MISC metadata.xml 274 RMD160 d8553c975069891686530053f724977d4c9b04c0 SHA1 25898891236a55e46285bbe1022c87465049da6e SHA256 8f020073e4576192cb4f631849fd704f25a1ea176368eef75a3c24c4f9727e36
