@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libSM
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libSM/ChangeLog,v 1.70 2009/09/30 09:58:54 haubi Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libSM/ChangeLog,v 1.71 2009/09/30 19:55:38 ssuominen Exp $
+
+  30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org> libSM-1.1.1.ebuild:
+  amd64 stable wrt #282290
 
   30 Sep 2009; Michael Haubenwallner <haubi@gentoo.org> libSM-1.1.1.ebuild,
   metadata.xml:
